Np 45640 affiliations mapping scopus (#1385)
* extracting labels and organizations

* code review